@@ -1181,9 +1181,13 @@
 #define ENABLE_TEXT_NOTIFICATIONS_ONLY 1
 #endif
 
-#if !defined(ENABLE_EXTERNAL_SVG_REFERENCES) && !PLATFORM(CHROMIUM)
+#if !defined(ENABLE_EXTERNAL_SVG_REFERENCES)
+#if PLATFORM(CHROMIUM)
+#define ENABLE_EXTERNAL_SVG_REFERENCES 0
+#else
 #define ENABLE_EXTERNAL_SVG_REFERENCES 1
-#endif
+#endif // PLATFORM(CHROMIUM)
+#endif // !defined(ENABLE_EXTERNAL_SVG_REFERENCES)
 
 #if !defined(WTF_USE_ZLIB) && !PLATFORM(QT)
 #define WTF_USE_ZLIB 1
